fixed sed and edited makefile

--- a/CPP01/ex05/Makefile
+++ b/CPP01/ex05/Makefile
@@ -4,9 +4,9 @@ SRCS = main.cpp Harl.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
-CC = c++
+CXX = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 DEL = rm -rf
 
