--- a/CPP09/ex00/Makefile
+++ b/CPP09/ex00/Makefile
@@ -5,7 +5,7 @@ OBJS = $(SRCS:.cpp=.o)
 
 CXX = c++
 
-CXXFLAGS = -g3 -Wall -Werror -Wextra -std=c++98
+CXXFLAGS = -Wall -Werror -Wextra -std=c++98
 
 DEL = rm -rf
 
